fix: small fix (06-build-page)

--- a/06-build-page/project-dist/index.html
+++ b/06-build-page/project-dist/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 </header>
-}
+
     <main class="main"><div class="container">
   <div class="inner-container">
     <h2 class="main-title">Latest articles</h2>
@@ -79,7 +79,7 @@
     </div>
   </div>
 </div>
-}</main>
+</main>
     <footer class="footer">
   <div class="container">
     <div class="inner-container footer-inner-container">
@@ -101,6 +101,6 @@
     </div>
   </div>
 </footer>
-}
+
   </body>
 </html>
